RSMS-335: Fixed cabinet saving issue causing relevant inspection to not be saved. Filter to also how cabinets with uncertified inspection and due-date of previous year. Fixed and improved table layout and style. No longer create inspection with set due-date when adding new cabinet. Fixed possible null certification date issue. Pass latest inspection to cabinet model if inspection exists. Order cabinet inspections by due-date. Investigate created or edited cabinets/inspections not showing up after save (shows after refresh).

--- a/rsms/src/stylesheets/equipment-styles.css
+++ b/rsms/src/stylesheets/equipment-styles.css
@@ -306,11 +306,14 @@ button.btn:not(.btn-large) {
     /* background: pink; */
     float:left;
     padding:20px 5px;
-    height:auto;
+    height: 90px;
     border-right: 1px solid #DDDDDD;
     border-bottom: 1px solid #DDDDDD !important;
     box-sizing:border-box;
     display:table-cell;
+}
+.bio-safety-cabinets-container table tr td ul:last-child li{
+    border-bottom:none !important;
 }
 
 .bio-safety-cabinets-container table tr th ul li{
